classDiagram
    class User {
      +id
      +full_name
      +email
      +role
      +city
      +is_verified
    }

    class Bike {
      +id
      +engine_number
      +chassis_number
      +plate_number
      +city
      +is_stolen
    }

    class TheftReport {
      +id
      +status
      +theft_date
      +theft_city
      +description
      +owner_recovery_confirmed
    }

    class Sighting {
      +id
      +engine_partial
      +chassis_partial
      +confidence_score
      +owner_confirmation_status
      +is_archived
    }

    class Notification {
      +id
      +type
      +message
      +is_read
      +created_at
    }

    class AuditLog {
      +id
      +action
      +endpoint
      +timestamp
    }

    class MLAnalysisCache {
      +id
      +analysis_type
      +cache_key
      +payload_json
      +generated_at
    }

    User "1" --> "*" Bike : owns
    Bike "1" --> "*" TheftReport : reported_in
    TheftReport "1" --> "*" Sighting : has
    User "1" --> "*" Notification : receives
    User "1" --> "*" AuditLog : performs
